# stt

./: .gitignore  README.md  audio_worker.py  config.benchmark.yml  config.sample.yml  evdev_listener.py  input_controller.py  linux_overlay.py  linux_text_injector.py  menubar.py  mlx_worker.py  onboarding.py  overlay.py  profiles.py  prompt_overlay.py  prompts_config.py  providers.py  pyproject.toml  requirements.txt  stt.py  stt_app.py  stt_config.py
src/stt/: __init__.py  __main__.py  app.py  cli.py  config.py  defaults.py  issue_capture.py  onboarding.py  profiles.py  providers.py  recordings.py
src/stt/audio/: client.py
src/stt/input/: _keys.py  controller.py  evdev_listener.py
src/stt/text/: injector.py  linux_injector.py
src/stt/ui/: linux_overlay.py  menubar.py  prompt_overlay.py
src/stt/workers/: mlx_worker.py  parakeet_worker.py
tests/: stress_recording.py  test_overlay_harness.py
