[project]
name = "stt"
dynamic = ["version"]
description = "Like SuperWhisper, but free. Like Wispr Flow, but local. Voice-to-text for macOS and Linux."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pynput>=1.7.6",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "watchdog>=3.0.0",
    "metaphone>=0.6",
    "packaging>=21.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "mlx-whisper>=0.4.0; sys_platform == 'darwin'",
    "rumps>=0.4.0; sys_platform == 'darwin'",
    "numba>=0.60.0; sys_platform == 'darwin'",
    "parakeet-mlx>=0.5.0; sys_platform == 'darwin'",
    "evdev>=1.6.0; sys_platform == 'linux'",
    "PyGObject>=3.42.0; sys_platform == 'linux'",
]

[project.optional-dependencies]
parakeet = ["parakeet-mlx"]

[project.scripts]
stt = "stt:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[tool.hatch.build.targets.wheel]
only-include = ["stt.py", "stt_app.py", "stt_config.py", "stt_defaults.py", "recordings.py", "issue_capture.py", "audio_worker_client.py", "text_injector.py", "input_controller.py", "providers.py", "profiles.py", "menubar.py", "mlx_worker.py", "parakeet_worker.py", "audio_worker.py", "postprocess.py", "overlay.py", "onboarding.py", "prompt_overlay.py", "prompts_config.py", "evdev_listener.py", "linux_overlay.py", "linux_text_injector.py"]

[tool.hatch.build.targets.wheel.sources]
"stt.py" = "stt.py"
"stt_app.py" = "stt_app.py"
"stt_config.py" = "stt_config.py"
"stt_defaults.py" = "stt_defaults.py"
"recordings.py" = "recordings.py"
"issue_capture.py" = "issue_capture.py"
"audio_worker_client.py" = "audio_worker_client.py"
"text_injector.py" = "text_injector.py"
"input_controller.py" = "input_controller.py"
"providers.py" = "providers.py"
"profiles.py" = "profiles.py"
"menubar.py" = "menubar.py"
"mlx_worker.py" = "mlx_worker.py"
"parakeet_worker.py" = "parakeet_worker.py"
"audio_worker.py" = "audio_worker.py"
"postprocess.py" = "postprocess.py"
"overlay.py" = "overlay.py"
"onboarding.py" = "onboarding.py"
"prompt_overlay.py" = "prompt_overlay.py"
"prompts_config.py" = "prompts_config.py"
"evdev_listener.py" = "evdev_listener.py"
"linux_overlay.py" = "linux_overlay.py"
"linux_text_injector.py" = "linux_text_injector.py"
