[project]
name = "stt"
dynamic = ["version"]
description = "Like SuperWhisper, but free. Like Wispr Flow, but local. Voice-to-text for macOS and Linux."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pynput>=1.7.6",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "watchdog>=3.0.0",
    "metaphone>=0.6",
    "packaging>=21.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "mlx-whisper>=0.4.0; sys_platform == 'darwin'",
    "rumps>=0.4.0; sys_platform == 'darwin'",
    "numba>=0.60.0; sys_platform == 'darwin'",
    "parakeet-mlx>=0.5.0; sys_platform == 'darwin'",
    "evdev>=1.6.0; sys_platform == 'linux'",
    "PyGObject>=3.42.0; sys_platform == 'linux'",
]

[project.optional-dependencies]
parakeet = ["parakeet-mlx"]

[project.scripts]
stt = "stt.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/stt/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/stt"]
